required changes to compile with java 11